modify heap related code

--- a/heaps.ipynb
+++ b/heaps.ipynb
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c5a7bec",
+   "id": "c0a0465d",
    "metadata": {},
    "source": [
     "## 4) Kth Largest Element in an Array\n",
@@ -571,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "11b3cc18",
+   "id": "4a58eea0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "5eafd250",
+   "id": "9ebd21c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "7d5879ed",
+   "id": "a64e760f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5d340fea",
+   "id": "7e96da53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d51c9a0c",
+   "id": "ba819bff",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "baab1dcf",
+   "id": "9c064618",
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f43e170",
+   "id": "ff27daf5",
    "metadata": {},
    "source": [
     "## 5) Smallest Number in Infinite Set\n",
@@ -717,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "415df4db",
+   "id": "47635361",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ca390fec",
+   "id": "15ef4a63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "f6045cf3",
+   "id": "64016c43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +788,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "df429d2d",
+   "id": "e94eed03",
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cf28674",
+   "id": "f39fe30f",
    "metadata": {},
    "source": [
     "## 6) Maximum Subsequence Score\n",
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "0a6c43ca",
+   "id": "0f03e62a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "1b1f321c",
+   "id": "9c8263ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,7 +898,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "ebbf9784",
+   "id": "f0a02eff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -935,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "968ea3c6",
+   "id": "d5390b82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a68bc4c6",
+   "id": "574e6ff8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "608b15e7",
+   "id": "e383da3b",
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "8426a6c3",
+   "id": "6b95b38f",
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "7832883e",
+   "id": "b17442bf",
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "162507e4",
+   "id": "fe5b4073",
    "metadata": {},
    "source": [
     "## 7) Total Cost to Hire K Workers\n",
@@ -1092,7 +1092,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "fadb88f1",
+   "id": "eab734bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1103,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "9c943e09",
+   "id": "22805560",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,13 +1127,13 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "b81560dd",
+   "id": "0e3dcc08",
    "metadata": {},
    "outputs": [],
    "source": [
     "def totalCost(costs: List[int], k: int, candidates: int) -> int:\n",
     "    \n",
-    "        # head_workers stores the first k workers.\n",
+    "    # head_workers stores the first k workers.\n",
     "    # tail_workers stores at most last k workers without any workers from the first k workers. \n",
     "    head_workers = costs[:candidates]\n",
     "    tail_workers = costs[max(candidates, len(costs) - candidates):]\n",
@@ -1141,7 +1141,8 @@
     "    heapify(tail_workers)\n",
     "    \n",
     "    answer = 0\n",
-    "    next_head, next_tail = candidates, len(costs) - 1 - candidates \n",
+    "    next_head = candidates\n",
+    "    next_tail = len(costs) - candidates - 1\n",
     "    \n",
     "    for _ in range(k): \n",
     "        if not tail_workers or head_workers and head_workers[0] <= tail_workers[0]: \n",
@@ -1158,14 +1159,14 @@
     "            if next_head <= next_tail:  \n",
     "                heappush(tail_workers, costs[next_tail])\n",
     "                next_tail -= 1\n",
-    "                    \n",
+    "    \n",
     "    return answer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "f0aa6704",
+   "id": "4443aa51",
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1190,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "6cd6cc3b",
+   "id": "1962b8e7",
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebe0f90e",
+   "id": "0c3a2e1b",
    "metadata": {},
    "outputs": [],
    "source": []
