--- a/backtracking.ipynb
+++ b/backtracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bbe0f3fa",
+   "id": "308e9a68",
    "metadata": {},
    "source": [
     "# Backtracking"
@@ -10,7 +10,54 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45440ad7",
+   "id": "102418c8",
+   "metadata": {},
+   "source": [
+    "## Backtracking Template"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffabe329",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def backtrack(candidate):\n",
+    "#     if find_solution(candidate):\n",
+    "#         output(candidate)\n",
+    "#         return\n",
+    "    \n",
+    "#     # iterate all possible candidates.\n",
+    "#     for next_candidate in list_of_candidates:\n",
+    "#         if is_valid(next_candidate):\n",
+    "#             # try this partial candidate solution\n",
+    "#             place(next_candidate)\n",
+    "#             # given the candidate, explore further.\n",
+    "#             backtrack(next_candidate)\n",
+    "#             # backtrack\n",
+    "#             remove(next_candidate)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cd51af7",
+   "metadata": {},
+   "source": [
+    "Here are a few notes about the above pseudocode.\n",
+    "\n",
+    "* Overall, the enumeration of candidates is done in two levels: 1). at the first level, the function is implemented as recursion. At each occurrence of recursion, the function is one step further to the final solution.  2). as the second level, within the recursion, we have an iteration that allows us to explore all the candidates that are of the same progress to the final solution.\n",
+    "\n",
+    "* The backtracking should happen at the level of the iteration within the recursion. \n",
+    "\n",
+    "* Unlike brute-force search, in backtracking algorithms we are often able to determine if a partial solution candidate is worth exploring further (i.e. is_valid(next_candidate)), which allows us to prune the search zones. This is also known as the constraint, e.g. the attacking zone of queen in N-queen game. \n",
+    "\n",
+    "* There are two symmetric functions that allow us to mark the decision (place(candidate)) and revert the decision (remove(candidate)).  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4df80731",
    "metadata": {},
    "source": [
     "## 1) Letter Combinations of a Phone Number\n",
@@ -38,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "79a3e9d0",
+   "id": "72f5ee9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "724a7001",
+   "id": "01ccee99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e5406263",
+   "id": "b21f4a71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e09e5483",
+   "id": "5bce2fa3",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8e6e3719",
+   "id": "d567945c",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3039faf5",
+   "id": "074f4911",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8c957d2",
+   "id": "91075955",
    "metadata": {},
    "source": [
     "## 2) Combination Sum III\n",
@@ -224,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "15e0aac7",
+   "id": "93680dc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a8d1aad8",
+   "id": "24b0074f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "69e6af43",
+   "id": "b7b7edbd",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4e5104ed",
+   "id": "0fe835c7",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "66c2a58f",
+   "id": "4a6d1877",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "295204a9",
+   "id": "f105b877",
    "metadata": {},
    "outputs": [],
    "source": []
