add more dynamic programming related code

--- a/dynamic_programming.ipynb
+++ b/dynamic_programming.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0ea8d32c",
+   "id": "628ab7ee",
    "metadata": {},
    "source": [
     "# Dynamic Programming"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0abf3c10",
+   "id": "b45981ae",
    "metadata": {},
    "source": [
     "## 1) Climbing Stairs\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "660af8b0",
+   "id": "0f77606d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,8 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "5ef29a4c",
+   "execution_count": 2,
+   "id": "a3060ff7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,8 +91,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "9ee27163",
+   "execution_count": 3,
+   "id": "6aef8a8f",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "2"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,8 +113,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "5ce1e46f",
+   "execution_count": 4,
+   "id": "7680b0c9",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "3"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4aa6c157",
+   "id": "8826af5e",
    "metadata": {},
    "source": [
     "## 2) House Robber\n",
@@ -163,8 +163,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "a9bc0edb",
+   "execution_count": 5,
+   "id": "096570e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,8 +173,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "efba783d",
+   "execution_count": 6,
+   "id": "b8b56bbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,8 +200,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "1a033d4d",
+   "execution_count": 7,
+   "id": "2a8fb09c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,8 +226,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "6c3294ef",
+   "execution_count": 8,
+   "id": "51aa587f",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "4"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,8 +248,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "5e880788",
+   "execution_count": 9,
+   "id": "90737ef9",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "12"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41ec6f71",
+   "id": "23782fea",
    "metadata": {},
    "source": [
     "## 3) Min Cost Climbing Stairs\n",
@@ -309,8 +309,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "515a1365",
+   "execution_count": 10,
+   "id": "8bd26918",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,8 +339,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "95769869",
+   "execution_count": 11,
+   "id": "e1aa33c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,8 +360,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "48b9af63",
+   "execution_count": 12,
+   "id": "8dd1ba00",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
        "15"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,8 +382,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "16d40c2a",
+   "execution_count": 13,
+   "id": "6feba010",
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
        "6"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,9 +403,129 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e6275b60",
+   "metadata": {},
+   "source": [
+    "## 4) N-th Tribonacci Number\n",
+    "\n",
+    "The Tribonacci sequence Tn is defined as follows: \n",
+    "\n",
+    "T0 = 0, T1 = 1, T2 = 1, and Tn+3 = Tn + Tn+1 + Tn+2 for n >= 0.\n",
+    "\n",
+    "Given n, return the value of Tn.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: n = 4 <br />\n",
+    "Output: 4\n",
+    "\n",
+    "Explanation:\n",
+    "T_3 = 0 + 1 + 1 = 2 <br />\n",
+    "T_4 = 1 + 1 + 2 = 4 <br />\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: n = 25 <br />\n",
+    "Output: 1389537"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "edee91ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Top-Down Approach (Memorization)\n",
+    "\n",
+    "def tribonacci(n: int) -> int:\n",
+    "    \n",
+    "    def dp(i: int) -> int:\n",
+    "        \n",
+    "        if i not in memo:\n",
+    "            memo[i] = dp(i-1) + dp(i-2) + dp(i-3) # Recurrence relation\n",
+    "        \n",
+    "        return memo[i]\n",
+    "    \n",
+    "    memo = {0: 0, 1: 1, 2: 1}\n",
+    "    return dp(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "dbdf24d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Bottom-Up Approach (Tabulation)\n",
+    "\n",
+    "def tribonacci(n: int) -> int:\n",
+    "    \n",
+    "    if n < 3:\n",
+    "        return 1 if n else 0\n",
+    "    \n",
+    "    dp = [0] * (n+1)\n",
+    "    \n",
+    "    dp[0] = 0\n",
+    "    dp[1] = 1\n",
+    "    dp[2] = 1\n",
+    "    \n",
+    "    for i in range(3, n+1):\n",
+    "        dp[i] = dp[i-1] + dp[i-2] + dp[i-3]\n",
+    "    \n",
+    "    return dp[n]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6c72f5f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 4\n",
+    "tribonacci(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "70270b77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1389537"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 25\n",
+    "tribonacci(n)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f61363c",
+   "id": "7a89c12d",
    "metadata": {},
    "outputs": [],
    "source": []
