--- a/dynamic_programming.ipynb
+++ b/dynamic_programming.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "628ab7ee",
+   "id": "48576663",
    "metadata": {},
    "source": [
     "# Dynamic Programming"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b45981ae",
+   "id": "1a42b6f9",
    "metadata": {},
    "source": [
     "## 1) Climbing Stairs\n",
@@ -40,11 +40,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0f77606d",
+   "id": "eac5085e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Top-Down Approach (Memorization)\n",
+    "# Top-Down Approach (Memoization)\n",
     "\n",
     "def climbStairs(n: int) -> int:\n",
     "    \n",
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a3060ff7",
+   "id": "38618a40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6aef8a8f",
+   "id": "81c86b5c",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7680b0c9",
+   "id": "34bf9502",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8826af5e",
+   "id": "1772896f",
    "metadata": {},
    "source": [
     "## 2) House Robber\n",
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "096570e1",
+   "id": "5234bbbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,11 +174,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b8b56bbd",
+   "id": "b99983f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Top-Down Approach (Memorization)\n",
+    "# Top-Down Approach (Memoization)\n",
     "\n",
     "def rob(nums: List[int]) -> int:\n",
     "    def dp(i: int):\n",
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2a8fb09c",
+   "id": "a0f7a383",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "51aa587f",
+   "id": "8b7cc3c7",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "90737ef9",
+   "id": "c15ed13c",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23782fea",
+   "id": "b194cafa",
    "metadata": {},
    "source": [
     "## 3) Min Cost Climbing Stairs\n",
@@ -310,11 +310,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8bd26918",
+   "id": "355cce4e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Top-Down Approach (Memorization)\n",
+    "# Top-Down Approach (Memoization)\n",
     "\n",
     "def minCostClimbingStairs(cost: List[int]) -> int:\n",
     "    \n",
@@ -323,13 +323,11 @@
     "        if i <= 1:\n",
     "            return 0\n",
     "        \n",
-    "        if i in memo:\n",
-    "            return memo[i]\n",
-    "        \n",
-    "        down_one = cost[i-1] + dp(i-1)\n",
-    "        down_two = cost[i-2] + dp(i-2)\n",
-    "        \n",
-    "        memo[i] = min(down_one, down_two) # Recurrence relation\n",
+    "        if i not in memo:\n",
+    "            down_one = cost[i-1] + dp(i-1)\n",
+    "            down_two = cost[i-2] + dp(i-2)\n",
+    "\n",
+    "            memo[i] = min(down_one, down_two) # Recurrence relation\n",
     "        \n",
     "        return memo[i]\n",
     "    \n",
@@ -340,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e1aa33c0",
+   "id": "284d3c61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8dd1ba00",
+   "id": "28640fdf",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "6feba010",
+   "id": "c82cd9bd",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6275b60",
+   "id": "73e38e58",
    "metadata": {},
    "source": [
     "## 4) N-th Tribonacci Number\n",
@@ -433,11 +431,11 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "edee91ae",
+   "id": "c7f1706d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Top-Down Approach (Memorization)\n",
+    "# Top-Down Approach (Memoization)\n",
     "\n",
     "def tribonacci(n: int) -> int:\n",
     "    \n",
@@ -455,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "dbdf24d2",
+   "id": "c51b5de7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,12 +466,11 @@
     "    \n",
     "    dp = [0] * (n+1)\n",
     "    \n",
-    "    dp[0] = 0\n",
     "    dp[1] = 1\n",
     "    dp[2] = 1\n",
     "    \n",
     "    for i in range(3, n+1):\n",
-    "        dp[i] = dp[i-1] + dp[i-2] + dp[i-3]\n",
+    "        dp[i] = dp[i-1] + dp[i-2] + dp[i-3] # Recurrence relation\n",
     "    \n",
     "    return dp[n]"
    ]
@@ -481,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6c72f5f6",
+   "id": "8719e018",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "70270b77",
+   "id": "88062a82",
    "metadata": {},
    "outputs": [
     {
@@ -523,9 +520,161 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "14e73d9a",
+   "metadata": {},
+   "source": [
+    "## 5) Delete and Earn\n",
+    "\n",
+    "You are given an integer array nums. You want to maximize the number of points you get by performing the following operation any number of times:\n",
+    "\n",
+    "Pick any nums[i] and delete it to earn nums[i] points. Afterwards, you must delete every element equal to nums[i] - 1 and every element equal to nums[i] + 1.\n",
+    "Return the maximum number of points you can earn by applying the above operation some number of times.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: nums = [3, 4, 2] <br />\n",
+    "Output: 6\n",
+    "\n",
+    "Explanation: You can perform the following operations:\n",
+    "- Delete 4 to earn 4 points. Consequently, 3 is also deleted. nums = [2].\n",
+    "- Delete 2 to earn 2 points. nums = [].\n",
+    "\n",
+    "You earn a total of 6 points.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: nums = [2, 2, 3, 3, 3, 4] <br />\n",
+    "Output: 9\n",
+    "\n",
+    "Explanation: You can perform the following operations:\n",
+    "- Delete a 3 to earn 3 points. All 2's and 4's are also deleted. nums = [3,3].\n",
+    "- Delete a 3 again to earn 3 points. nums = [3].\n",
+    "- Delete a 3 once more to earn 3 points. nums = [].\n",
+    "\n",
+    "You earn a total of 9 points."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d88d87ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "from collections import defaultdict\n",
+    "from functools import lru_cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "01a88cd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Top-Down Approach (Memoization)\n",
+    "\n",
+    "def deleteAndEarn(nums: List[int]) -> int:\n",
+    "    \n",
+    "    @lru_cache(maxsize=None)\n",
+    "    def dp(num: int) -> int:\n",
+    "        \n",
+    "        # Base cases\n",
+    "        if num == 0:\n",
+    "            return 0\n",
+    "        if num == 1:\n",
+    "            return points[1]\n",
+    "            \n",
+    "        return max(points[num] + dp(num-2), dp(num-1)) # Recurrence relation\n",
+    "    \n",
+    "    points = defaultdict(int)\n",
+    "    max_number = 0\n",
+    "    \n",
+    "    for num in nums:\n",
+    "        points[num] += num\n",
+    "        max_number = max(max_number, num)\n",
+    "    \n",
+    "    return dp(max_number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a3eaea56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Bottom-Up Approach (Tabulation)\n",
+    "\n",
+    "def deleteAndEarn(nums: List[int]) -> int:\n",
+    "    \n",
+    "    points = defaultdict(int)\n",
+    "    max_number = 0\n",
+    "    \n",
+    "    for num in nums:\n",
+    "        points[num] += num\n",
+    "        max_number = max(max_number, num)\n",
+    "    \n",
+    "    dp = [0] * (max_number + 1) # Important\n",
+    "    \n",
+    "    dp[1] = points[1]\n",
+    "    \n",
+    "    for i in range(2, len(dp)):\n",
+    "        dp[i] = max(points[i] + dp[i-2], dp[i-1]) # Recurrence relation\n",
+    "    \n",
+    "    return max(dp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "741deee6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [3, 4, 2]\n",
+    "deleteAndEarn(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "5ebfcc26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [2, 2, 3, 3, 3, 4]\n",
+    "deleteAndEarn(nums)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a89c12d",
+   "id": "e57c7203",
    "metadata": {},
    "outputs": [],
    "source": []
