add more dynamic programming related code

--- a/dynamic_programming.ipynb
+++ b/dynamic_programming.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "48576663",
+   "id": "e2efede4",
    "metadata": {},
    "source": [
     "# Dynamic Programming"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a42b6f9",
+   "id": "98e45bb4",
    "metadata": {},
    "source": [
     "## 1) Climbing Stairs\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eac5085e",
+   "id": "5032d136",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "38618a40",
+   "id": "53422989",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "81c86b5c",
+   "id": "972fe841",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "34bf9502",
+   "id": "cf870409",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1772896f",
+   "id": "c1a912af",
    "metadata": {},
    "source": [
     "## 2) House Robber\n",
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5234bbbb",
+   "id": "6dc765a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b99983f1",
+   "id": "5349db6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a0f7a383",
+   "id": "617816ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8b7cc3c7",
+   "id": "3da880fe",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c15ed13c",
+   "id": "0313e14b",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b194cafa",
+   "id": "e6eac4b0",
    "metadata": {},
    "source": [
     "## 3) Min Cost Climbing Stairs\n",
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "355cce4e",
+   "id": "757815b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "284d3c61",
+   "id": "ba700525",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "28640fdf",
+   "id": "bf71d2a2",
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c82cd9bd",
+   "id": "6b9c36f6",
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73e38e58",
+   "id": "d0b73295",
    "metadata": {},
    "source": [
     "## 4) N-th Tribonacci Number\n",
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c7f1706d",
+   "id": "78193d21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c51b5de7",
+   "id": "a03ac167",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "8719e018",
+   "id": "14c1e1cc",
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "88062a82",
+   "id": "46c9ee71",
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14e73d9a",
+   "id": "e1926030",
    "metadata": {},
    "source": [
     "## 5) Delete and Earn\n",
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d88d87ae",
+   "id": "afa0fd66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "01a88cd4",
+   "id": "82cef490",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a3eaea56",
+   "id": "bdce8cc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "741deee6",
+   "id": "785f320e",
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5ebfcc26",
+   "id": "8c03a466",
    "metadata": {},
    "outputs": [
     {
@@ -672,9 +672,135 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "268f718b",
+   "metadata": {},
+   "source": [
+    "## 6) Domino and Tromino Tiling\n",
+    "\n",
+    "You have two types of tiles: a 2 x 1 domino shape and a tromino shape. You may rotate these shapes.\n",
+    "\n",
+    "Given an integer n, return the number of ways to tile an 2 x n board. Since the answer may be very large, return it modulo 10^9 + 7.\n",
+    "\n",
+    "In a tiling, every square must be covered by a tile. Two tilings are different if and only if there are two 4-directionally adjacent cells on the board such that exactly one of the tilings has both squares occupied by a tile.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: n = 3 <br />\n",
+    "Output: 5\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: n = 1 <br />\n",
+    "Output: 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d5374db9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Top-Down Approach (Memoization)\n",
+    "\n",
+    "def numTilings(n: int) -> int:\n",
+    "    \n",
+    "    MOD = 1_000_000_007\n",
+    "    \n",
+    "    @lru_cache(maxsize=None)\n",
+    "    def p(n):\n",
+    "        if n == 2:\n",
+    "            return 1\n",
+    "        return (p(n-1) + f(n-2)) % MOD\n",
+    "    \n",
+    "    @lru_cache(maxsize=None)\n",
+    "    def f(n):\n",
+    "        if n <= 2:\n",
+    "            return n\n",
+    "        return (f(n-1) + f(n-2) + 2 * p(n-1)) % MOD\n",
+    "        \n",
+    "    return f(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9f256635",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Bottom-Up Approach (Tabulation)\n",
+    "\n",
+    "def numTilings(n: int) -> int:\n",
+    "    \n",
+    "    MOD = 1_000_000_007\n",
+    "    \n",
+    "    if n <= 2:\n",
+    "        return n\n",
+    "    \n",
+    "    f = [0] * (n+1)\n",
+    "    p = [0] * (n+1)\n",
+    "    \n",
+    "    f[1] = 1\n",
+    "    f[2] = 2\n",
+    "    p[2] = 1\n",
+    "    \n",
+    "    for i in range(3, n+1):\n",
+    "        f[i] = (f[i-1] + f[i-2] + 2 * p[i-1]) % MOD\n",
+    "        p[i] = (p[i-1] + f[i-2]) % MOD\n",
+    "    \n",
+    "    return f[n]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "6ceba3ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 3\n",
+    "numTilings(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b97c67ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 1\n",
+    "numTilings(n)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e57c7203",
+   "id": "df0cf822",
    "metadata": {},
    "outputs": [],
    "source": []
